@@ -6,9 +6,9 @@
 \usage{
 sjp.glmer(fit, type = "re", vars = NULL, ri.nr = NULL,
   group.estimates = NULL, remove.estimates = NULL, emph.grp = NULL,
-  sample.n = NULL, sort.est = NULL, title = NULL, axis.labels = NULL,
-  axis.title = NULL, geom.colors = "Set1", geom.size = NULL,
-  show.values = TRUE, show.p = TRUE, show.ci = FALSE,
+  sample.n = NULL, sort.est = NULL, title = NULL, legend.title = NULL,
+  axis.labels = NULL, axis.title = NULL, geom.colors = "Set1",
+  geom.size = NULL, show.values = TRUE, show.p = TRUE, show.ci = FALSE,
   show.legend = FALSE, show.intercept = FALSE,
   string.interc = "(Intercept)", fade.ns = FALSE, axis.lim = NULL,
   digits = 2, vline.type = 2, vline.color = "grey70", facet.grid = TRUE,
@@ -81,6 +81,10 @@ random effects for plotting (useful when ecomparing multiple models).}
 
 \item{title}{character vector with one or more labels that are used as plot title.}
 
+\item{legend.title}{character vector, used as title for the plot legend. Note that
+only some plot types have legends (e.g. \code{type = "pred"} or when
+grouping estimates with \code{group.estimates}).}
+
 \item{axis.labels}{character vector with labels for the model terms, used as axis labels.
 For mixed models, should either be vector of fixed effects variable labels 
 (if \code{type = "fe"} or \code{type = "fe.std"}) or a vector of group (value)
@@ -90,7 +94,11 @@ labels from the random intercept's categories (if \code{type = "re"}).}
 the plot function and type), used as title(s) for the x and y axis. 
 If not specified, a default labelling  is chosen.}
 
-\item{geom.colors}{user defined color for geoms. See 'Details' in \code{\link{sjp.grpfrq}}.}
+\item{geom.colors}{user defined color palette for geoms. If \code{group.estimates}
+is \emph{not} specified, must either be vector with two color values or a specific
+color palette code (see 'Details' in \code{\link{sjp.grpfrq}}). Else, if
+\code{group.estimates} is specified, \code{geom.colors} must be a vector
+of same length as groups. See 'Examples'.}
 
 \item{geom.size}{size resp. width of the geoms (bar width, line thickness or point size, 
 depending on plot type and function). Note that bar and bin widths mostly 
